# NoSleep

./: .gitignore  CLAUDE.md  LICENSE  README.md  autostart.py  installer.iss  main.py  pyproject.toml  sleep_control.py
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.sh
src/: autostart.py  main.py  sleep_control.py
tests/: test_autostart.py  test_main.py  test_sleep_control.py
