[project]
name = "NoSleep"
version = "1.0.0"
description = "A tray app that keeps computer active"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    'pystray~=0.19.5',
    'pillow~=12.1.0',
    'pyinstaller~=6.18.0',
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
