[project]
name = "NoSleep"
version = "1.0.0"
description = "A tray app that keeps computer active"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'pystray~=0.19.5',
    'pillow~=12.1.0',
    "loguru~=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pyinstaller~=6.18.0",
    "pytest~=8.3.0",
    "pytest-mock~=3.14.0",
]
